[package]
name = "vpn-sub-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["cookies", "json", "rustls-tls"] }
scraper = "0.25.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
anyhow = "1.0.86"
hyper = { version = "1.4.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"

[profile.release]
strip = true          # Automatically strip symbols from the binary.
lto = true            # Enable Link Time Optimization.
codegen-units = 1     # Reduce number of codegen units to increase optimizations.
panic = "abort"       # Abort on panic to reduce binary size.

